# careerhub

./: .coderabbit.yaml  LICENSE  Makefile  README.md  docker-compose.yml
backend/: README.md  alembic.ini  config.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/app/: dependencies.py  main.py
backend/app/routers/: auth.py  users.py
backend/core/: security.py
backend/db/connectors/: sqlalchemy_conn.py
backend/db/daos/: user_profile_dao.py
backend/db/models/: __init__.py  address.py  application.py  applications.py  attachments.py  base.py  companies.py  files.py  jobpostings.py  jobs.py  notes.py  principals.py  users.py
backend/db/services/: application_service.py  user_profile_service.py
backend/migrations/: env.py
backend/migrations/versions/: 147f3d8b218b_initial_tables.py  1778023aa31a_add_created_at_and_deleted_at_to_base.py  1a3dc4dc8eec_init_tables.py  430eb0f1aecc_initial_tables.py  859c0cc06079_init.py  88aeae333d45_add_deleted_at_to_applications.py  a976895475a2_add_password_hash_and_username_to_user_.py  b20465c6848c_initial.py  c6f3c33c1fbb_add_auth_method_check_constraint.py  fd271a5fa0c4_add_tables.py
backend/routers/v1/: auth.py
backend/schemas/: applications.py  users.py
backend/security/: authentication.py
backend/tests/: utils.py
backend/tests/services/: conftest.py  test_application_service.py  test_user_profile_service.py
career-hub-app/: README.md  package.json  pnpm-lock.yaml
career-hub-app/app/: layout.tsx  page.tsx
career-hub-app/app/(auth)/login/: page.tsx
playground/: sqlalchemy_tutorial.ipynb
