[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "jupyterlab>=3.2.1",
]
