[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.136.1",
    "psycopg2-binary>=2.9",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.0",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "ipython>=9.13.0",
    "jupyterlab>=3.2.1",
    "black>=22.3.0",
    "pytest>=9.0.3",
    "pytest-cov>=6.0.0",
]

# ── Pytest ────────────────────────────────────────────────────────────────────
# MIN_COVERAGE = 0  ← raise to 80 (and update tool.coverage.report below) once real tests exist
[tool.pytest.ini_options]
minversion = "9.0"
pythonpath = ["."]
addopts = [
    "-vq",
    "--no-header",
    "--tb=short",
    "--cov=.",
    "--cov-report=term-missing:skip-covered",
    "--cov-fail-under=0",
]

# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = ["tests/*", "migrations/*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 0
show_missing = true
skip_covered = true
